feature(*): exposed the rabbit to the outside world using the nginx proxy for the websockets

--- a/proxy.conf
+++ b/proxy.conf
@@ -1,7 +1,10 @@
 server {
     listen 8090;
 
-    location / {
-        proxy_pass http://rabbit:15674;
+    location /sock/ {
+      proxy_pass http://rabbit:15674/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
     }
 }
